--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -634,7 +634,7 @@ jobs:
         
         source venv/bin/activate
         pip install --upgrade pip
-        pip install flask psycopg2-binary python-dotenv requests
+        pip install flask psycopg2-binary python-dotenv requests Flask-Cors
         
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
