--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -581,7 +581,7 @@ jobs:
         echo "🔒 Configurando permisos para que Nginx (www-data) pueda acceder..."
         chmod o+rx ${BASE_DIR}
         chmod o+rx ${TEST_DIR}
-        chmod o+rx ${PROJECT_PATH}
+        chmod o+rx ${PROJECT_PATH}/app
         
         # Si existe carpeta static, configurar permisos recursivamente
         if [ -d "static" ]; then
@@ -679,7 +679,7 @@ jobs:
         }
         
         location /test/static/ {
-            alias ${PROJECT_PATH}/static/;
+            alias ${PROJECT_PATH}/app/static/;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             add_header Pragma "no-cache";
             add_header Expires "0";
