--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -808,36 +808,29 @@ jobs:
         echo "🧹 Limpiando archivos remotos en /tmp/ (con sudo) antes de la copia..."
         ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} "sudo rm -f /tmp/setup_osrm.sh /tmp/test_env_file /tmp/deploy_test_remote.sh"
 
-        # 2. Transferir scripts al directorio /tmp/
-        echo "📤 Transfiriendo archivos al servidor (/tmp/)..."
-        scp -o StrictHostKeyChecking=no -i deploy_key setup_osrm.sh ${USER}@${HOST}:/tmp/
-        scp -o StrictHostKeyChecking=no -i deploy_key temp_env_file ${USER}@${HOST}:/tmp/test_env_file
-        scp -o StrictHostKeyChecking=no -i deploy_key deploy_test_remote.sh ${USER}@${HOST}:/tmp/
+        # 2. Transferir scripts al directorio /tmp/ usando 'cat' y 'sudo tee'
+        echo "📤 Transfiriendo archivos al servidor (/tmp/) con sudo tee..."
+        cat setup_osrm.sh | ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} "sudo tee /tmp/setup_osrm.sh > /dev/null"
+        cat deploy_test_remote.sh | ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} "sudo tee /tmp/deploy_test_remote.sh > /dev/null"
+        cat temp_env_file | ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} "sudo tee /tmp/test_env_file > /dev/null"
         
-        # 3. Ejecutar OSRM desde /tmp/
+        # 3. Ejecutar OSRM desde /tmp/ (añadiendo sudo a chmod)
         echo ""
         echo "🗺️ ========================================="
         echo "🗺️ PASO 1: CONFIGURAR OSRM (PUERTO)"
         echo "🗺️ ========================================="
         ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} \
-          "chmod +x /tmp/setup_osrm.sh && /tmp/setup_osrm.sh"
+          "sudo chmod +x /tmp/setup_osrm.sh && /tmp/setup_osrm.sh"
         
-        # 4. Ejecutar despliegue desde /tmp/
+        # 4. Ejecutar despliegue desde /tmp/ (añadiendo sudo a chmod)
         echo ""
         echo "🚀 ========================================="
         echo "🚀 PASO 2: DESPLEGAR APLICACIÓN"
         echo "🚀 ========================================="
         ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} \
-          "chmod +x /tmp/deploy_test_remote.sh && \
-           /tmp/deploy_test_remote.sh '${NAME_LOWER}' '${DOMAIN_BASE}' '${INSTANCE_NUM}' '${BRANCH_NAME}' '${PERSON_NAME}' && \
-           if [ -f /tmp/test_env_file ]; then \
-             if [ -d /home/ubuntu/Web-server-UDP/test/Proyecto_1_Diseno ]; then \
-               sudo mv /tmp/test_env_file /home/ubuntu/Web-server-UDP/test/Proyecto_1_Diseno/.env; \
-             else \
-               sudo mv /tmp/test_env_file /opt/location-tracker/test/Proyecto_1_Diseno/.env; \
-             fi; \
-           fi; \
-           sudo rm -f /tmp/deploy_test_remote.sh /tmp/setup_osrm.sh" # Limpiar desde /tmp/
+          "sudo chmod +x /tmp/deploy_test_remote.sh && \
+           /tmp/deploy_test_remote.sh '${NAME_LOWER}' '${DOMAIN_BASE}' '${INSTANCE_NUM}' '${BRANCH_NAME}' '${PERSON_NAME}'"
+           # La limpieza de /tmp/ y el mv del .env ya están dentro de deploy_test_remote.sh con sudo
         
         # --- FIN DE LA CORRECCIÓN ---
 
